--- a/package.json
+++ b/package.json
@@ -11,9 +11,21 @@
     "@apollo/client": "^3.7.7",
     "@faustwp/cli": "^1.0.0",
     "@faustwp/core": "^1.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@wordpress/base-styles": "^4.47.0",
     "graphql": "^16.6.0",
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.29",
+    "postcss-import": "^15.1.0",
+    "tailwindcss": "^3.3.3"
   }
 }
